--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "name": "theclassroom-telegram-bot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
